package ecommerce.channels;
/*
 * NotificationChannel interface: Implementor
 */
public interface NotificationChannel {
    String sendNotification(String message);
}